# databricks-sql-python

./: .gitignore  .pre-commit-config.yaml  BUG_FIX_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KERNEL_REV  MEMORY_PROFILING_README.md  MEMORY_PROFILING_SUMMARY.md  MYPY_RECOMMENDATIONS.md  Makefile  QUICK_START_MYPY.md  README.md  TRANSACTIONS.md  check.py  check_sqlalchemy.py  conftest.py  env.template  memory_profile_results.json  memory_profile_results_v2.json  memory_profile_telemetry.py  memory_profile_telemetry_v2.py  mypy-strict.ini  osv-scanner.toml  pylintrc  pyproject.toml  pyproject.toml.recommended  setup.cfg  setup.py  setup_script.py  test-container-with-reqs.dockerfile  test.env.example  tester.py
.bot/: config.yaml
.github/: CODEOWNERS  dco.yml
.github/.github/: pull_request_template.md
.github/workflows/: build.yml  close-stale.yml  code-coverage.yml  code-quality-checks.yml  coverage-check-dynamic-e2e-parallel.yml  coverage-check-parallel.yml  coverage-check.yml  daily-telemetry-e2e.yml  dbr-lts-install.yml  dco-check.yml  e2e-tests.yml  engineer-bot-followup.yml  engineer-bot.yml  integration.yml  kernel-e2e.yml  notify-dco-failure.js  notify-dco-failure.yml  publish-manual.yml  publish-test.yml  publish.yml  reviewer-bot-followup.yml  reviewer-bot-unit-tests.yml  reviewer-bot.yml  sdk-smoke.yml  securityScan.yml  sqlalchemy-dialect.yml  test-telemetry-only.yml  token-federation-test.yml  trigger-integration-tests.yml  warm-deps-cache.yml
cmdexec/clients/python/: README.md  command_exec_client.py  dev_requirements.txt  pyproject.toml  setup.cfg  setup.py  sql_command_service_pb2.py  sql_command_service_pb2_grpc.py  test-container-with-reqs.dockerfile
cmdexec/clients/python/api/: messages_pb2.py  sql_cmd_service_pb2.py  sql_cmd_service_pb2_grpc.py
cmdexec/clients/python/src/databricks/sql/: HISTORY  __init__.py  client.py  exc.py  thrift_backend.py  types.py  utils.py
cmdexec/clients/python/src/databricks/sql/api/: messages_pb2.py  sql_cmd_service_pb2.py  sql_cmd_service_pb2_grpc.py
cmdexec/clients/python/src/databricks/sql/thrift_api/TCLIService/: TCLIService-remote  ttypes.py
cmdexec/clients/python/src/dbsql/connector/: __init__.py  client.py
cmdexec/clients/python/src/dbsql/connector/api/: sql_cmd_service_pb2.py  sql_cmd_service_pb2_grpc.py
cmdexec/clients/python/tests/: docker-entrypoint.sh  docker-run-unit.sh  test_fetches.py  test_fetches_bench.py  test_thrift_backend.py  tests.py
cmdexec/clients/python/thrift_dbr_test/: README.md  thrift_basic_tests.py  thrift_sqlquery_tests.py
databricks_sql_connector/: pyproject.toml
databricks_sql_connector/src/databricks/: sql.py
databricks_sql_connector/src/databricks/sql/: __init__.py  utils.py
databricks_sql_connector/src/databricks/sqlalchemy/: __init__.py
databricks_sql_connector_core/: conftest.py  pyproject.toml
databricks_sql_connector_core/src/databricks/sql/: __init__.py  client.py  thrift_backend.py  utils.py
databricks_sql_connector_core/src/databricks/sql/auth/: auth.py  authenticators.py  oauth.py  retry.py  thrift_http_client.py
databricks_sql_connector_core/src/databricks/sql/cloudfetch/: download_manager.py  downloader.py
databricks_sql_connector_core/src/databricks/sql/parameters/: native.py
databricks_sql_connector_core/src/databricks/sql/thrift_api/TCLIService/: TCLIService.py  constants.py  ttypes.py
databricks_sql_connector_core/src/databricks_sql_connector_core/sql/: __init__.py  client.py  thrift_backend.py  utils.py
databricks_sql_connector_core/src/databricks_sql_connector_core/sql/auth/: auth.py  authenticators.py  oauth.py  retry.py  thrift_http_client.py
databricks_sql_connector_core/src/databricks_sql_connector_core/sql/cloudfetch/: download_manager.py  downloader.py
databricks_sql_connector_core/src/databricks_sql_connector_core/sql/parameters/: __init__.py  native.py
databricks_sql_connector_core/src/databricks_sql_connector_core/sql/thrift_api/TCLIService/: ttypes.py
databricks_sql_connector_core/src/databricks_sql_connector_core/sqlalchemy/: __init__.py
databricks_sql_connector_core/tests/: pytest.ini
databricks_sql_connector_core/tests/e2e/: test_complex_types.py  test_driver.py  test_parameterized_queries.py
databricks_sql_connector_core/tests/e2e/common/: decimal_tests.py  large_queries_mixin.py  predicates.py  retry_test_mixins.py  staging_ingestion_tests.py  timestamp_tests.py  uc_volume_tests.py
databricks_sql_connector_core/tests/unit/: test_arrow_queue.py  test_auth.py  test_client.py  test_cloud_fetch_queue.py  test_column_queue.py  test_download_manager.py  test_downloader.py  test_endpoint.py  test_fetches.py  test_fetches_bench.py  test_init_file.py  test_oauth_persistence.py  test_param_escaper.py  test_parameters.py  test_retry.py  test_thrift_backend.py
databricks_sqlalchemy/: pyproject.toml
docs/: execute_async.md  parameters.md  proxy.md  proxy_configuration.md
examples/: PROFILING_README.md  README.md  capture_sdk_m2m_token.py  capture_sdk_m2m_trace.py  check.py  cleanup_column_tags.py  credentials.env.example  custom_cred_provider.py  custom_logger.py  insert_data.py  interactive_oauth.py  kerberos_proxy_auth.py  load_credentials.py  m2m_oauth.py  parameters.py  persistent_oauth.py  plot_comparison.py  profile_column_tags.py  profile_read_then_write_table_tags.py  profile_read_then_write_tags.py  profile_table_tags.py  proxy_authentication.py  query_async_execute.py  query_cancel.py  query_execute.py  query_tags_example.py  sea_connector_test.py  set_user_agent.py  spog_all_auth_test.py  spog_full_matrix.py  spog_full_test.py  spog_peco_test.py  spog_sdk_m2m_only.py  spog_staging_test.py  spog_test.py  spog_u2m_one.py  sqlalchemy.py  staging_ingestion.py  streaming_put.py  test_connection.py  (+9 more)
examples/experimental/: comparator.py  (+4 more)
scripts/: bench_kernel_vs_thrift.py  dbr_lts_install_check.py  dbr_lts_smoke_notebook.py  dependency_manager.py  requirements-sdk.txt
tests/: conftest.py  test_auth.py  test_fetches_bench.py  tests.py
thrift_dbr_test/: README.md  thrift_basic_tests.py
(+374 files in other folders)
