[tool.poetry]
name = "databricks-sql-connector"
version = "5.0.0"
description = "Databricks SQL Connector for Python"
authors = ["Databricks <databricks-sql-connector-maintainers@databricks.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{ include = "databricks", from = "src" }]
include = ["CHANGELOG.md"]

[tool.poetry.dependencies]
python = "^3.10"
# Keep the cap at <0.23.0. thrift ships sdist-only, and thrift 0.23.0's
# setup.py calls sys.exit(0) on the build-success path, which kills the PEP
# 517 build backend before pip writes output.json. On the OLD setuptools
# shipped by DBR LTS (14.3 / 15.4) this is a hard `pip install` failure --
# the SEV0 ES-1960554 incident (4.2.7 widened this to <0.24.0 and was yanked;
# see PR #840). Do NOT re-widen until a fixed thrift (0.23.1 / 0.24.0, per
# THRIFT-6067 / apache/thrift#3584) ships. The `DBR LTS Install` CI check
# (.github/workflows/dbr-lts-install.yml) installs the built wheel on real DBR
# LTS clusters and catches this regression when dependency pins change.
thrift = "~=0.22.0"
pandas = [
    { version = ">=1.2.5,<4.0.0", python = ">=3.10,<3.13" },
    { version = ">=2.2.3,<4.0.0", python = ">=3.13" }
]
lz4 = [
    { version = "^4.0.2", python = ">=3.10,<3.14" },
    { version = "^4.4.5", python = ">=3.14" }
]
requests = "^2.33.0"
oauthlib = "^3.1.0"
openpyxl = "^3.0.10"
urllib3 = ">=2.7.0,<3.0.0"
python-dateutil = "^2.8.0"
pyarrow = [
    { version = ">=23.0.1", python = ">=3.10,<3.13", optional=true },
    { version = ">=23.0.1", python = ">=3.13,<3.14", optional=true },
    { version = ">=23.0.1", python = ">=3.14", optional=true }
]
pyjwt = "^2.12.0"
pybreaker = "^1.0.0"
requests-kerberos = {version = "^0.15.0", optional = true}
# Transitive-only dependencies pinned to a security floor. Nothing in our
# direct dep set constrains these, so without an explicit floor here `poetry
# lock` floats them to whatever satisfies the parents -- which reintroduces
# known CVEs (e.g. cryptography 45.0.6 carries the 9.8 PYSEC-2026-36). A
# lock-only bump is not durable: the next `poetry lock` silently reverts it.
# Declaring the floor here makes the CVE clear survive re-locks and documents
# why. Raise these as new advisories land; the OSV-Scanner gate is the backstop.
cryptography = ">=48.0.0"
idna = ">=3.16"
python-dotenv = ">=1.2.2"
# Optional Rust kernel backend for ``use_kernel=True`` (PyO3 wheel).
# Pulled in only via the ``[kernel]`` extra below. The published wheel
# is ``abi3`` with ``Requires-Python: >=3.10`` (built ``abi3-py310``),
# so the dependency is gated to Python >= 3.10: on 3.8/3.9 the
# ``[kernel]`` extra resolves to nothing and ``use_kernel=True`` raises
# a clear ImportError at runtime (see backend/kernel/_errors.py).
#
# Floor is 0.2.0 (``^0.2.0`` == ``>=0.2.0,<0.3.0``). The kernel is
# pre-1.0, so each 0.x minor may carry breaking changes — the ``<0.3.0``
# cap means we bump this deliberately when the kernel ships 0.3.0 rather
# than letting a potentially-breaking minor flow in automatically. 0.2.0
# keeps the same Requires-Python (>=3.10) and pyarrow (>=23.0.1,<24) pin
# as 0.1.x, so the gating below is unchanged.
databricks-sql-kernel = {version = "^0.2.0", optional = true, python = ">=3.10"}


[tool.poetry.extras]
pyarrow = ["pyarrow"]
# ``pip install databricks-sql-connector[kernel]`` adds the Rust kernel
# backend so ``use_kernel=True`` works. No-op on Python < 3.10 (the
# wheel's floor) — those users get a runtime ImportError if they pass
# ``use_kernel=True``.
#
# The kernel result path (``backend/kernel/result_set.py``) needs
# pyarrow, but it is NOT listed in this extra on purpose: the published
# kernel wheel declares ``pyarrow>=23.0.1,<24`` as a hard runtime
# dependency, so ``pip install ...[kernel]`` already pulls a compatible
# pyarrow transitively. Listing bare ``pyarrow`` here additionally
# forces poetry to co-resolve an unconstrained pyarrow against the
# kernel's ``>=23.0.1,<24`` (which itself requires Python >=3.10) across
# the connector's full 3.8–3.14 support matrix, which is unsatisfiable
# on 3.8/3.9 and breaks ``poetry lock``. The kernel's own dependency
# metadata is the single source of truth for the pyarrow floor.
kernel = ["databricks-sql-kernel"]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
mypy = "^1.10.1"
pylint = ">=2.12.0"
black = "^26.3.1"
pytest-dotenv = "^0.5.2"
pytest-cov = "^4.0.0"
pytest-xdist = "^3.0.0"
numpy = [
    { version = ">=1.16.6", python = ">=3.10,<3.11" },
    { version = ">=1.23.4", python = ">=3.11" },
]

[tool.poetry.urls]
"Homepage" = "https://github.com/databricks/databricks-sql-python"
"Bug Tracker" = "https://github.com/databricks/databricks-sql-python/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = "true"
exclude = ['ttypes\.py$', 'TCLIService\.py$']

[tool.black]
exclude = '/(\.eggs|\.git|\.hg|\.mypy_cache|\.nox|\.tox|\.venv|\.svn|_build|buck-out|build|dist|thrift_api)/'

[tool.pytest.ini_options]
markers = [
    "reviewed: Test case has been reviewed by Databricks",
    "serial: Tests that must run serially (not parallelized)",
    "realkernel: Requires the real databricks-sql-kernel wheel and an unpolluted sys.modules (no fake kernel stub); must run in a separate pytest invocation from tests that fake databricks_sql_kernel (deselect with -m 'not realkernel', run alone with -m realkernel).",
]
minversion = "6.0"
log_cli = "false"
log_cli_level = "INFO"
testpaths = ["tests"]
env_files = ["test.env"]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/thrift_api/*",  
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.xml]
output = "coverage.xml"
