[tool.poetry]
name = "databricks-sql-connector"
version = "2.0.2"
description = "Databricks SQL Connector for Python"
authors = ["Databricks <databricks-sql-connector-maintainers@databricks.com>"]
license = "Apache-2.0"
packages = [{include = "databricks", from = "src"}]

[tool.poetry.dependencies]
python = "^3.7.1"
thrift = "^0.13.0"
pyarrow = "^5.0.0"
pandas = "^1.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
