[metadata]
name = databricks-sql-connector
version = attr: databricks.sql.__version__
description = "Databricks SQL Connector for Python"
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://databricks.com"
author = "Databricks"
author_email = "feedback@databricks.com"
license = "http://www.apache.org/licenses/LICENSE-2.0"
classifiers =
    "Intended Audience :: Developers"
    "License :: OSI Approved :: Apache Software License"
    "Operating System :: OS Independent"
    "Topic :: Database :: Front-Ends"
install_requires =
    thrift >= 0.13.0
    pyarrow >= 5.0.0
    pandas >= 1.0.0

[options]
package_dir=
    =src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
* = HISTORY
